--- a/LiteServ App/Base.lproj/MainMenu.xib
+++ b/LiteServ App/Base.lproj/MainMenu.xib
@@ -661,10 +661,17 @@
                         <action selector="about:" target="494" id="WO4-K0-M97"/>
                     </connections>
                 </menuItem>
+                <menuItem isSeparatorItem="YES" id="kwG-5E-mzl"/>
                 <menuItem title="Admin Interface" id="IM8-77-niD">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
                         <action selector="openAdmin:" target="494" id="SUK-FU-4Tc"/>
+                    </connections>
+                </menuItem>
+                <menuItem title="Install Tool…" id="Gtz-1L-8tu">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="showToolInstaller:" target="494" id="VdQ-ON-q1N"/>
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="0b1-1i-eRR"/>
