--- a/Test-iOS/Storyboard.storyboard
+++ b/Test-iOS/Storyboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="ZqU-fE-4Iq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="ZqU-fE-4Iq">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--Root View Controller-->
@@ -29,6 +29,15 @@
                                 <state key="normal" title="Add"/>
                                 <connections>
                                     <action selector="addTeam:" destination="ZqU-fE-4Iq" eventType="touchUpInside" id="hri-7v-FbX"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="peM-w0-m0P">
+                                <rect key="frame" x="13" y="25" width="73" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Pick Game"/>
+                                <connections>
+                                    <action selector="addTeam:" destination="ZqU-fE-4Iq" eventType="touchUpInside" id="fG0-ic-3My"/>
+                                    <action selector="pickGame:" destination="ZqU-fE-4Iq" eventType="touchUpInside" id="GpT-lS-MnR"/>
                                 </connections>
                             </button>
                         </subviews>
